update with nav link and its text color

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -67,11 +67,11 @@ ul {
 }
 
 .nav-scroll ul li {
-  @apply text-blue-500;
+  @apply text-black;
 }
 
 .nav-scroll .btn {
-  @apply bg-blue-500 text-white;
+  @apply bg-black text-white;
 }
 
 #disclosures * {
