--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -133,7 +133,7 @@ p {
   color: #1d2127;
 }
 
-.contact {
+/* .contact {
   text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
@@ -157,7 +157,7 @@ p {
   to {
     background-position: 200% center;
   }
-}
+} */
 
 @media only screen and (max-width : 425px) {
   .landing-footer {
