--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -42,8 +42,47 @@ body {
 }
 
 .footer-part {
-  background-image: url("assets/image/footer.png");
-  background-size: cover;
+  background: black;
+}
+
+.footer_input {
+  background-color: white;
+}
+
+.footer-box {
+  padding: 15px;
+  background-color: #19232b;
+  border-radius: 10px;
+  margin-top: 80px;
+  text-align: center;
+}
+
+.ceo-box {
+  padding: 15px;
+  background-color: #19232b;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  width: 100%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+@media screen and (max-width : 700px) {
+  .footer {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+@media screen and (max-width: 642px) {
+  .contract {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -59,6 +98,77 @@ body {
 @media screen and (max-width: 700px) {
   .navbar {
     display: none;
+  }
+}
+
+.main-footer {
+  display: flex;
+}
+
+@media screen and (max-width: 700px) {
+  .main-footer {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .contract .footer-box p {
+    margin-left: 150px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .contact .footer-box p {
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .contract .footer-box p {
+    font-size: 20px;
+    margin-left: 70px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .contract .footer-box a {
+    font-size: 15px;
+    margin-left: 130px;
+  }
+
+  .contract .footer-box img {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .contract .footer-box a {
+    font-size: 15px;
+    margin-left: 0px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .contract .footer-box a {
+    font-size: 10px;
+    margin-left: 0px;
+  }
+}
+
+@media screen and (max-width: 362px) {
+  .contract .footer-box a {
+    font-size: 10px;
+    margin-left: 0px;
+  }
+
+  .contract .footer-box img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .contract .footer-box p {
+    margin-left: 0px;
   }
 }
 
